--- a/src/app/styles/variables.css
+++ b/src/app/styles/variables.css
@@ -74,7 +74,7 @@
   --card-bg-color: var(--black-100);
   --month-color: var(--primary-500);
   --cont-text-color: var(--white);
-  --cont-subtext-color: var(--grey-500);
+  --cont-subtext-color: var(--gray-500);
   --tertiary-button-color: var(--tertiary-500);
   --accent-button-color: var(--accent-500);
   --button-text-color: var(--accent-500);
